--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,3 +2,8 @@ body {
 font-family: sans-serif, Arial;
 font-size: 16px;
 }
+.q1 {
+   width: 100px;
+   height: 30px;
+   display: inline-block;
+}
