--- a/views/view2.html
+++ b/views/view2.html
@@ -3,7 +3,7 @@
     {% for key, variant in variantes %}
         <div>
             <input name ="{{question.id}}" id ="{{key}}" type='radio' value="{{key}}"
-                   {% if qData[question.id] == key %} checked = 'checked' {% endif %} >
+                   {% if qData[key] == "true" %} checked = 'checked' {% endif %} >
             {{variant}}
         </div>
     {% endfor %}
