changed mysqli queries

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 
     <div class='question'>
         </br></br>
-        {{question.qNum}}.
+        {{question.qNum}}
         {{question.qText}}
         </br></br>
     </div>
