--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3,6 +3,10 @@ html{
     border: 1px solid #ccc;
 }
 
+hr{
+border-color:#ddd;
+}
+
 body {
 font-family: sans-serif, Arial;
 font-size: 16px;
@@ -27,10 +31,7 @@ height: 100%;
    height: 30px;
    display: inline-block;
 }
-.controlPanel {
-    border: solid 1px #eee;
-    height: calc(100% - 107px);
-}
+
 
 
 /* menu */
@@ -66,10 +67,10 @@ height: 100%;
 
 /* Control panel */
 
-.controlPanel{
+.controlPanel {
+    border: solid 1px #ccc;
+    height: calc(100% - 107px);
     padding: 30px;
-    background-color:#F9F9F9;
-    
 }
 .wellcomeScreen{
     border: solid #2196F3 1px;
@@ -83,11 +84,12 @@ height: 100%;
 }
 .answer-variant{
     display: inline-block;
-    width: 155px;
+    width: 190px;
     border: 1px solid #aaa;
     border-radius: 5px;
     text-align: center;
-    border: 1px dashed #999;
+    border: 1px solid #dadada;
+    background-color: #F4F4F4; 
     vertical-align: middle;
     position: relative;
     margin: 3px;
@@ -187,9 +189,9 @@ input:checked + .slider:before {
 .buildingArea{
     height: calc(100% - 107px);
     padding: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
-    background-color: #eee;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #F5F5F5;
 }
 
 .placeholder{
@@ -207,7 +209,7 @@ input:checked + .slider:before {
 }
 .question{
     border-color: #aaa;
-    background-color: #F9F9F9;
+    background-color: #eee;
 }
 .goodbuy{
     border-color: #5cb85c;
@@ -226,6 +228,7 @@ input:checked + .slider:before {
     vertical-align: middle;
     border-color: #ccc;
     border-collapse: separate;
+    box-shadow: 0 0 1px 2px rgba(221, 221, 221, 1);
 }
 
 .qtext {
@@ -238,4 +241,156 @@ input:checked + .slider:before {
 .qnumber {
     text-align: center;
     width: 60px;
+}
+
+
+
+/* all questions building area */
+
+.collumns{
+    margin: 10px;
+}
+
+.newq {
+    display: inline-block;
+    width: 100%;
+    border: 1px dashed #ccc;
+    padding-top: 45%;
+    padding-bottom: 45%;
+    text-align: center;
+    position: relative;
+}
+
+
+.newQBuildingArea{
+    height: calc(100% - 107px);
+    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #F5F5F5;
+}
+
+.newqMenue{
+    border: 1px solid #ccc;
+    height: calc(100% - 107px);
+    background-color: #e9e9e9;
+    padding: 20px;
+}
+
+/* wellcomepage */
+
+.wellcome {
+    height: 100%;
+    text-align: center;
+    transform: translateY(41%);
+}
+.centerButtons {
+    margin: 10px;
+}
+
+
+/* modal window */
+
+
+.modalDialog {
+    position: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.8);
+    z-index: 99999;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    display: none;
+    pointer-events: none;
+}
+
+.modalDialog:target {
+    display: block;
+    pointer-events: auto;
+}
+
+.modalDialog > div {
+    width: 95%;
+    height: 95%;
+    position: relative;
+    margin: 1.5% auto;
+    padding: 0 15px 0 15px;
+    border-radius: 0px;
+    background: #fff;
+}
+
+.close {
+    background: #606061;
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: -12px;
+    text-align: center;
+    top: -10px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    -moz-box-shadow: 1px 1px 3px #000;
+    -webkit-box-shadow: 1px 1px 3px #000;
+    box-shadow: 1px 1px 3px #000;
+}
+.close:hover { background: #00d9ff; }
+
+.modal-columns{
+    height:100%;
+    padding: 0;
+}
+
+.modal-menue{
+    background-color: #eee;
+    border: 1px solid #e1e1e1;
+}
+.modal-workspace{
+    overflow-y: auto;
+    padding: 15px;
+}
+
+.qBuilderHead{
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background-color: #cfcfcf;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.qBuilderBody{
+    overflow-y: auto;
+    height: calc(100% - 120px);
+    border: 1px solid #ccc;
+    padding: 15px;
+}
+.qBuilderFooter{
+    height: 50px;
+    transform: translateY(30%);
+    text-align: right;   
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.qindex{
+    text-align: justify;
+}
+.qTextInput{
+    width: 100%;
+    height: 100px;
+}
+.qTextModal{
+    display: inline-flex;
+    text-align: justify;
+}
+.qPModal{
+    display: inline-flex;
 }
