--- a/views/view4.html
+++ b/views/view4.html
@@ -4,7 +4,7 @@
         <div>
             <input name ="{{key}}" id ="{{key}}" type='checkbox' value="true"
                    {% if qData[key] == true %} checked = 'checked' {% endif %}>
-            {{key}} {{variant}}
+            {{variant}}
         </div>
     {% endfor %}
     <br><br>
