--- a/views/base.html
+++ b/views/base.html
@@ -3,14 +3,23 @@
     <head>
         {% block head %}
             <title>Questionnaire</title>
-            <meta http-equiv='Content-Type' content='text/html; charset=utf-8' title='Questionnaire'>
-            <link rel='stylesheet' href='public/stylesheets/styles.css' type='text/css'>
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge" charset=utf-8' title='Questionnaire'>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            
             <script type="text/javascript" src="lib/jquery-3.0.0.min.js"></script>
+
+            <!-- Bootstrap -->
+            <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+            <!-- Font Awesome -->
+            <link href="public/stylesheets/font-awesome.css" rel="stylesheet">
+            <!-- Styles -->
+            <link href="public/stylesheets/st.css" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
         <header>
+            {% block header %}
+            {% endblock %}
         </header>
         
         <div class='content'>
@@ -19,7 +28,8 @@
         </div>
         
         <footer>
-        &copy; SPORTMASTER 2016
+            {% block footer %}
+            {% endblock %}
         </footer>
     </body>
 </html>
