--- a/views/view1.html
+++ b/views/view1.html
@@ -1,17 +1,19 @@
-<form action='process.php?qId={{question.id}}' method='post'>
-    
-    {% for key, variant in variantes %}
-        <div>
-            <div class='q1'>
-                {{variant}}
-            </div>
-            <input name ="{{key}}" id ="{{key}}" type='text'
-            {% if qData[key] %} value = '{{qData[key]}}' {% endif %} >
-            
-        </div>
-    {% endfor %}
-    <br><br>
 
-    <button name = "next" id="next" type="submit" style="width: 180px" value="next"> Следующий вопрос>> </button></br></br>
-    <button name = "prev" id="prev" type="submit" style="width: 180px" value="back"> <<Предыдущий вопрос </button></br></br>
+
+<form action='process.php?qId={{question.id}}' method='post'>
+    <div class = 'variantes'>
+        {% for key, variant in variantes %}    
+            <input name ="{{key}}" id ="{{key}}" type='text' placeholder="{{variant}}" 
+            {% if qData[key] %} value = '{{qData[key]}}' {% endif %} class = 'qInput'>
+        {% endfor %}
+    </div>
+    <div class = 'buttons'>
+        <button name = "prev" id="prev" type="submit" value="back"  class = 'arrow-btn'> 
+            <i class = 'fa fa-chevron-up fa-2x'></i>
+        </button>
+        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn'>
+            <i class = 'fa fa-chevron-down fa-2x'></i>
+        </button>
+    </div>
+
 </form>
