--- a/views/view2.html
+++ b/views/view2.html
@@ -1,14 +1,20 @@
 <form action='process.php?qId={{question.id}}' method='post'>
-
-    {% for key, variant in variantes %}
-        <div>
-            <input name ="name[]" id ="{{key}}" type='radio' value="{{key}}"
-                   {% if qData[key] == "true" %} checked = 'checked' {% endif %} >
-            {{variant}}
-        </div>
-    {% endfor %}
-    <br><br>
-
-    <button name = "next" id="next" type="submit" style="width: 180px" value="next"> Следующий вопрос>> </button></br></br>
-    <button name = "prev" id="prev" type="submit" style="width: 180px" value="back"> <<Предыдущий вопрос </button></br></br>
+    
+    <div class = 'variantes'>
+        {% for key, variant in variantes %}
+            <div >
+                <input name = "name[]" id = "{{key}}" type = 'radio' value = "{{key}}"
+                       {% if qData[key] == "true" %} checked = 'checked' {% endif %} >
+                {{variant}}
+            </div>
+        {% endfor %}
+    </div>
+    <div class = 'buttons'>
+        <button name = "prev" id="prev" type="submit" value="back"  class = 'arrow-btn'> 
+            <i class = 'fa fa-chevron-up fa-2x'></i>
+        </button>
+        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn'>
+            <i class = 'fa fa-chevron-down fa-2x'></i>
+        </button>
+    </div>
 </form>
