--- a/views/view3.html
+++ b/views/view3.html
@@ -1,14 +1,20 @@
 <form action='process.php?qId={{question.id}}' method='post'>
-
-    {% for key, variant in variantes %}
-        <div>
-            {{variant}} 
+    <div class = 'variantes'>
+        {% for key, variant in variantes %}
+            <div class = "variante">
+                {{variant}} 
+            </div>
             <input name ="{{key}}" id ="{{key}}" type='number'
-                   {% if qData[key]%} value = '{{qData[key]}}' {% endif %}>
-        </div>
-    {% endfor %}
-    <br><br>
+               {% if qData[key]%} value = '{{qData[key]}}' {% endif %} class = 'qInput'>
 
-    <button name = "next" id="next" type="submit" style="width: 180px" value="next"> Следующий вопрос>> </button></br></br>
-    <button name = "prev" id="prev" type="submit" style="width: 180px" value="back"> <<Предыдущий вопрос </button></br></br>
+        {% endfor %}
+    </div>
+    <div class = 'buttons'>
+        <button name = "prev" id="prev" type="submit" value="back"  class = 'arrow-btn'> 
+            <i class = 'fa fa-chevron-up fa-2x'></i>
+        </button>
+        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn'>
+            <i class = 'fa fa-chevron-down fa-2x'></i>
+        </button>
+    </div>
 </form>
