--- a/views/base.html
+++ b/views/base.html
@@ -13,7 +13,8 @@
             <!-- Font Awesome -->
             <link href="public/stylesheets/font-awesome.css" rel="stylesheet">
             <!-- Styles -->
-            <link href="public/stylesheets/st.css" rel="stylesheet">
+            <link href="public/stylesheets/styles.css" rel="stylesheet">
+            
         {% endblock %}
     </head>
     <body>
@@ -31,5 +32,6 @@
             {% block footer %}
             {% endblock %}
         </footer>
+
     </body>
 </html>
