--- a/views/view1.html
+++ b/views/view1.html
@@ -1,9 +1,9 @@
-
+<script type="text/javascript" src = 'public/javascripts/if_inputs_full.js'> </script>
 
 <form action='process.php?qId={{question.id}}' method='post'>
     <div class = 'variantes'>
         {% for key, variant in variantes %}    
-            <input name ="{{key}}" id ="{{key}}" type='text' placeholder="{{variant}}" 
+            <input name ="{{key}}" id ="{{key}}" type='text' placeholder="{{variant['answer_text']}}" 
             {% if qData[key] %} value = '{{qData[key]}}' {% endif %} class = 'qInput'>
         {% endfor %}
     </div>
@@ -11,9 +11,11 @@
         <button name = "prev" id="prev" type="submit" value="back"  class = 'arrow-btn'> 
             <i class = 'fa fa-chevron-up fa-2x'></i>
         </button>
-        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn'>
+        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn' >
             <i class = 'fa fa-chevron-down fa-2x'></i>
         </button>
     </div>
-
 </form>
+
+
+
