--- a/views/view1.html
+++ b/views/view1.html
@@ -9,10 +9,10 @@
     </div>
     <div class = 'buttons'>
         <button name = "prev" id="prev" type="submit" value="back"  class = 'arrow-btn'> 
-            <i class = 'fa fa-chevron-up fa-2x'></i>
+            <i class = 'fa fa-chevron-left fa-2x move_left'></i>
         </button>
-        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn' >
-            <i class = 'fa fa-chevron-down fa-2x'></i>
+        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn'>
+            <i class = 'fa fa-chevron-right fa-2x move_right'></i>
         </button>
     </div>
 </form>
