--- a/views/view4.html
+++ b/views/view4.html
@@ -1,14 +1,44 @@
-<form action='process.php?qId={{question.id}}' method='post'>
-    
-    {% for key, variant in variantes %}
-        <div>
-            <input name ="{{key}}" id ="{{key}}" type='checkbox' value="true"
-                   {% if qData[key] == true %} checked = 'checked' {% endif %}>
-            {{variant}}
-        </div>
-    {% endfor %}
-    <br><br>
+<script type = 'text/javascript' src = "public/javascripts/buttons4.js"> </script>
 
-    <button name = "next" id="next" type="submit" style="width: 180px" value="next"> Следующий вопрос>> </button></br></br>
-    <button name = "prev" id="prev" type="submit" style="width: 180px" value="back"> <<Предыдущий вопрос </button></br></br>
+
+<form action='process.php?qId={{question.id}}' method='post'>
+
+    <div class = 'variantes-2col'>
+        {% for key, variant in variantes %}
+            {% if variant['answerIndex'] != 98 and variant['answerIndex'] != 99 %}
+                <div class = 'answer-item-lg' id = "answer-{{key}}">
+                    <input name ="{{key}}" id ="{{key}}" type='checkbox' value="true"
+                           {% if qData[key] == "true" %} checked = 'checked' {% endif %} class = 'hiddenInput'>
+                    <div class = 'answer-num'> {{variant['answerIndex']}} </div>
+                    <div class = 'answer-text'> {{variant['answer_text']}} </div>
+                    <div class = 'tick-hidden'><i class = 'fa fa-check'></i></div>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
+
+    <div class = 'variantes'>
+        {% for key, variant in variantes %}
+            {% if variant['answerIndex'] == 98 or variant['answerIndex'] == 99 %}
+                <div class = 'answer-item-lg' id = "answer-{{key}}">
+                    <input name ="{{key}}" id ="{{key}}" type='checkbox' value="true"
+                           {% if qData[key] == "true" %} checked = 'checked' {% endif %} class = 'hiddenInput'>
+                    <div class = 'answer-num'> {{variant['answerIndex']}} </div>
+                    <div class = 'answer-text'> {{variant['answer_text']}} </div>
+                    <div class = 'tick-hidden'><i class = 'fa fa-check'></i></div>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
+
+
+
+    <div class = 'buttons'>
+        <button name = "prev" id="prev" type="submit" value="back"  class = 'arrow-btn'> 
+            <i class = 'fa fa-chevron-left fa-2x move_left'></i>
+        </button>
+        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn'>
+            <i class = 'fa fa-chevron-right fa-2x move_right'></i>
+        </button>
+    </div>
 </form>
