--- a/views/view5.html
+++ b/views/view5.html
@@ -11,7 +11,7 @@
         {% for key, variant in variantes %}
             <tr>
                 <td>
-                    {{variant}}
+                    {{variant['answer_text']}}
                 </td>
                 {% for scaleKey, scaleStep in scale %}
                     <td>
@@ -25,6 +25,10 @@
 
     <br><br>
 
-    <button name = "next" id="next" type="submit" style="width: 180px" value="next"> Следующий вопрос>> </button></br></br>
-    <button name = "prev" id="prev" type="submit" style="width: 180px" value="back"> <<Предыдущий вопрос </button></br></br>
+    <button name = "prev" id="prev" type="submit" value="back"  class = 'arrow-btn'> 
+        <i class = 'fa fa-chevron-left fa-2x move_left'></i>
+    </button>
+    <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn'>
+        <i class = 'fa fa-chevron-right fa-2x move_right'></i>
+    </button>
 </form>
