--- a/views/view6.html
+++ b/views/view6.html
@@ -14,6 +14,10 @@
     Сумма:
     <br><br><br>
 
-    <button name = "next" id="next" type="submit" style="width: 180px" value="next"> Следующий вопрос>> </button></br></br>
-    <button name = "prev" id="prev" type="submit" style="width: 180px" value="back"> <<Предыдущий вопрос </button></br></br>
+        <button name = "prev" id="prev" type="submit" value="back"  class = 'arrow-btn'> 
+            <i class = 'fa fa-chevron-left fa-2x move_left'></i>
+        </button>
+        <button name = "next" id="next" type="submit" value="next" class = 'arrow-btn'>
+            <i class = 'fa fa-chevron-right fa-2x move_right'></i>
+        </button>
 </form>
