--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 /* макет страницы в целом *******************************************/
 
 html{
@@ -16,11 +20,9 @@ h1{
     height: 100%;
     width: 100%;
     border: 1px solid #ccc;
-    background-color: #cdc;
 }
 
 .header{
-    height: 70px;
     border: 1px solid #ccc;
 }
 .content{
@@ -28,7 +30,6 @@ h1{
     background-color: #FFF;
 }
 .footer{
-    height: 70px;
     border: 1px solid #ccc;
 }
 
@@ -39,14 +40,25 @@ h1{
     border: 1px solid #ccc;
 }
 
-.helloText{
+.helloDiv{
     font-size: 24px;
     border: 1px solid #ccc;
     margin: 0 auto;
     width: 700px;
     text-align: center;
-    margin-bottom: 50px;
+    vertical-align: bottom;
+    position: relative;
+
 }
+
+.helloText{
+    border: 1px solid #ccc;
+    font-size: 24px;
+    position: absolute;
+    bottom: 50px;
+    border: 1px solid #ccc; 
+}
+
 /*******************************************************************/
 
 /* стрелки и отправка **********************************************/
@@ -58,35 +70,32 @@ h1{
     text-align: center;
 }
 
-.arrow-btn{
-    width: 45px;
-    height: 43px;
-    background-color: #009D91;
-    color: #fff;
-    margin: 5px;
-    text-align: center;
-    border-radius: 2px;
+.startButton{
     border: 1px #1d766f solid;
+    background-color: #009D91;
+    font-size: 20px;
+    color: #fff;
+    font-weight: bold;
+    width: 100px;
+    height: 55px;
+    border-radius: 2px;
+    vertical-align: top;
     -webkit-box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.75);
-    box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.75);    
-    font-size: 12px;
+    box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.75);
 }
 
-.move_right{
-    padding-left: 5px;
-}
-
-.move_left{
-    padding-right: 5px;    
+.startButton:hover{
+    background-color: #5dcec6;
+    border: 1px #009D91 solid;
 }
 
 .pressEnterText{
     display: inline-block;
     color: #009D91;
     vertical-align: top;
-    margin: 10px;
-    margin-top: 15px;
+    margin: 15px;
+    margin-top: 20px;
     border: 1px solid #ccc;
 }
 
